# django-graphene-jwt

./: .bumpversion.cfg  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
django_graphene_jwt/: __init__.py  cli.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: __init__.py  test_django_graphene_jwt.py
