[tool]
[tool.poetry]
name = "django_graphene_jwt"
version = "0.1.0"
homepage = "https://github.com/moluwole/django_graphene_jwt"
description = "Top-level package for django_graphene_jwt."
authors = ["Oluwole Majiyagbe <oluwole564@gmail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "django_graphene_jwt" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "*"
click = "*"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"

[tool.poetry.scripts]
django_graphene_jwt = 'django_graphene_jwt.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
